--- a/app/public/index.html
+++ b/app/public/index.html
@@ -17,4 +17,8 @@
        <div id="root"></div>
   </body>
 
+ <footer>
+      <p><span class="branding">&copy; PDX Transplants, 2016</span></p>
+</footer>
+
 </html>
